--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,27 @@ body {
 #root {
   @apply min-h-screen;
 }
+
+/* Styling for search popup */
+
+.popup-content {
+  width: 90%;
+  height: 85%;
+  background: #fff;
+  padding-inline: 10px;
+  border: 3px solid #4c4ddc;
+  padding-bottom: 10px;
+  overflow-y: scroll;
+}
+
+@media (min-width: 1024px) {
+  .popup-content {
+    width: 70%;
+    height: fit-content;
+  }
+}
+
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
+}
