Added inital calendar version with overbooking protection and day selection

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,10 +23,19 @@ body {
   overflow-y: scroll;
 }
 
+.popup-calendar-content {
+  width: 95%;
+  height: fit-content;
+}
+
 @media (min-width: 1024px) {
   .popup-content {
     width: 70%;
     height: fit-content;
+  }
+
+  .popup-calendar-content {
+    width: 44%;
   }
 }
 
