--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,7 +25,7 @@ body {
 
 .popup-calendar-content {
   width: 95%;
-  height: fit-content;
+  height: 80%;
 }
 
 @media (min-width: 1024px) {
@@ -36,12 +36,14 @@ body {
 
   .popup-calendar-content {
     width: 44%;
+    height: 70%;
   }
 }
 
 @media (min-width: 1800px) {
   .popup-calendar-content {
     width: 22%;
+    height: 80%;
   }
 }
 
